<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Event" Id="{f3f2a29b-2422-4b6a-a1bd-d20b60811314}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	eEventType: E_EventType;
	eEventSeverity: TcEventSeverity;
	nEventIdentity: UDINT;
	sEventText: STRING(255);
	dtTimeStamp: DT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>