<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_CSVPersistentEventStorage" Id="{48057f67-f8f3-456e-8b98-5d8825e7cf1e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CSVPersistentEventStorage IMPLEMENTS I_PersistentStorage

VAR
	
	fileOpen: FB_FileOpen:=(sPathName:='c:\Events.log',nMode:= FOPEN_MODEAPPEND OR FOPEN_MODETEXT );
	fileClose: FB_FileClose;
	filePuts: FB_FilePuts;
	eWriteState: (FILE_OPEN_TRIGGER,FILE_OPEN, WAIT_FOR_EVENT, WRITE_EVENT_TRIGGER,WRITE_EVENT, FILE_CLOSE_TRIGGER, FILE_CLOSE, ERROR);
	stEventWrittenToFile: ST_Event;
	
	CsvString:T_MaxString;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE eWriteState OF
	FILE_OPEN_TRIGGER:
				fileOpen(bExecute:=TRUE);
				eWriteState:= FILE_OPEN;
	FILE_OPEN:
				fileOpen(bExecute:=FALSE);
				IF fileOpen.bError THEN
					eWriteState:= ERROR;
				ELSIF NOT fileOpen.bBusy AND fileOpen.hFile <> 0 THEN
					eWriteState := WAIT_FOR_EVENT;		
				END_IF
	WAIT_FOR_EVENT:
		//Do Nothing
	WRITE_EVENT_TRIGGER:
		CsvString := CreateCsvString(stEvent:=stEventWrittenToFile);
		
		filePuts(bExecute:= TRUE, sLine:=CsvString,hFile:=fileOpen.hFile );
		eWriteState := WRITE_EVENT;
				
	WRITE_EVENT:
			filePuts(bExecute:=FALSE);
			IF filePuts.bError THEN
					eWriteState:= ERROR;
				ELSIF NOT filePuts.bBusy  THEN
					eWriteState := FILE_CLOSE_TRIGGER;		
				END_IF
	FILE_CLOSE_TRIGGER:
		fileClose(bExecute:=TRUE,hFile:=fileOpen.hFile);
				eWriteState := FILE_CLOSE;
	FILE_CLOSE:
		fileClose(bExecute:=FALSE);
		IF fileClose.bError THEN
			eWriteState:= ERROR;
		ELSIF NOT fileClose.bBusy THEN
			eWriteState:=	FILE_OPEN_TRIGGER;
		END_IF
	ERROR:
	//Error Code here
	
END_CASE]]></ST>
    </Implementation>
    <Method Name="CreateCsvString" Id="{1667a629-d2bb-454b-9b8e-5ea3a3f673ac}">
      <Declaration><![CDATA[METHOD CreateCsvString : T_MaxString
VAR_INPUT
	stEvent: REFERENCE TO ST_Event;
	
END_VAR
VAR
	Tempstring: T_MaxString;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Tempstring:= TO_STRING(stEvent.eEventType);
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= ',');
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= TO_STRING(stEvent.eEventSeverity));
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= ',');
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= TO_STRING(stEvent.nEventIdentity));
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= ',');
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= TO_STRING(stEvent.sEventText));
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= ',');
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= TO_STRING(stEvent.dtTimeStamp));
Tempstring:=CONCAT(STR1:= Tempstring, STR2:= '$n');

CreateCsvString:= Tempstring;
]]></ST>
      </Implementation>
    </Method>
    <Method Name="StoreEvent" Id="{96bacc2c-21ac-45b8-8511-0845dc5a77db}">
      <Declaration><![CDATA[{warning 'add method implementation '}
METHOD StoreEvent
VAR_INPUT
	stEvent	: ST_Event;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Implement code here
IF eWriteState =  WAIT_FOR_EVENT THEN
	eWriteState:= WRITE_EVENT_TRIGGER;
	stEventWrittenToFile:=stEvent;

END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_CSVPersistentEventStorage">
      <LineId Id="9" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="38" Count="1" />
      <LineId Id="36" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="70" Count="3" />
      <LineId Id="69" Count="0" />
      <LineId Id="59" Count="1" />
      <LineId Id="62" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="63" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="20" Count="0" />
    </LineIds>
    <LineIds Name="FB_CSVPersistentEventStorage.CreateCsvString">
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="3" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="2" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="0" />
    </LineIds>
    <LineIds Name="FB_CSVPersistentEventStorage.StoreEvent">
      <LineId Id="7" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="11" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>